[gd_scene load_steps=15 format=3 uid="uid://cxsxosmgxw1vh"]

[ext_resource type="Script" path="res://Scripts/Shops/shop_basic.gd" id="1_rpe4b"]
[ext_resource type="Texture2D" uid="uid://cl16i4o4mlwje" path="res://Sprites/FoodStalls/ice cream/4.png" id="2_6r4v2"]
[ext_resource type="Script" path="res://Scripts/Shops/shop_skill_ice_cream.gd" id="2_wbeee"]
[ext_resource type="Texture2D" uid="uid://dme6rityn7wa4" path="res://Sprites/FoodStalls/ice cream/5.png" id="3_q46cp"]
[ext_resource type="Shader" path="res://Scripts/Shops/circle.gdshader" id="3_yfshx"]
[ext_resource type="Texture2D" uid="uid://d2o37j35r7ev3" path="res://Sprites/FoodStalls/ice cream/6.png" id="4_bv8wq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7s4tx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u0osb"]
radius = 23.8339

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33xky"]
shader = ExtResource("3_yfshx")
shader_parameter/radius = 0.48
shader_parameter/outline_thickness = 0.02
shader_parameter/inside_alpha = 0.1

[sub_resource type="Gradient" id="Gradient_34xxt"]
offsets = PackedFloat32Array(0, 0.025974)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_psmoo"]
gradient = SubResource("Gradient_34xxt")
fill_from = Vector2(0, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsalt"]
size = Vector2(15, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocuq0"]
size = Vector2(9.667, 46.542)

[sub_resource type="SpriteFrames" id="SpriteFrames_gb0ol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6r4v2")
}, {
"duration": 1.0,
"texture": ExtResource("3_q46cp")
}, {
"duration": 1.0,
"texture": ExtResource("4_bv8wq")
}],
"loop": true,
"name": &"IcecreamStall",
"speed": 5.0
}]

[node name="ShopIceCream" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_rpe4b")
craverType = "All"
maxCraver = 1
priceToBuy = 650
moneyMade = 40
delay_time = 7.0
placableTileIDs = Array[int]([1])

[node name="ShopSkill" type="Area2D" parent="."]
material = SubResource("CanvasItemMaterial_7s4tx")
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 2
script = ExtResource("2_wbeee")

[node name="Collision" type="CollisionShape2D" parent="ShopSkill"]
visible = false
shape = SubResource("CircleShape2D_u0osb")
debug_color = Color(0.565282, 0.55251, 0.223068, 0.42)

[node name="AreaColor" type="Sprite2D" parent="ShopSkill"]
self_modulate = Color(0.321569, 0.435294, 1, 1)
material = SubResource("ShaderMaterial_33xky")
scale = Vector2(0.75, 0.75)
texture = SubResource("GradientTexture2D_psmoo")

[node name="ShopBody" type="Area2D" parent="."]
position = Vector2(-32, -32)
scale = Vector2(4, 4)
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="ShopBody"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_vsalt")

[node name="ShopRange" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="Collision" type="CollisionShape2D" parent="ShopRange"]
shape = SubResource("RectangleShape2D_ocuq0")

[node name="Collision2" type="CollisionShape2D" parent="ShopRange"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_ocuq0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -7.5)
scale = Vector2(0.484, 0.484)
sprite_frames = SubResource("SpriteFrames_gb0ol")
animation = &"IcecreamStall"
frame_progress = 0.400142

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 7
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="ShopSkill" to="ShopSkill" method="_on_body_entered"]
[connection signal="body_exited" from="ShopSkill" to="ShopSkill" method="_on_body_exited"]
[connection signal="area_entered" from="ShopBody" to="." method="_on_shop_body_area_entered"]
[connection signal="area_exited" from="ShopBody" to="." method="_on_shop_body_area_exited"]
[connection signal="body_entered" from="ShopBody" to="." method="_on_shop_body_body_entered"]
[connection signal="body_exited" from="ShopBody" to="." method="_on_shop_body_body_exited"]
[connection signal="body_entered" from="ShopRange" to="." method="_on_shop_range_body_entered"]
[connection signal="body_exited" from="ShopRange" to="." method="_on_shop_range_body_exited"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
[connection signal="gui_input" from="Control/Button" to="." method="_on_button_gui_input"]
